# garrettdavis-dev

./: .gitignore  Cargo.nix  Cargo.toml  base.css  flake.nix  justfile  tailwind.config.js
.github/workflows/: build.yml
infra/: .terraform.lock.hcl  cloudfront.tf  lambda.tf  local.tf  outputs.tf  provider.tf  s3.tf
src/: config.rs  main.rs
src/db/: mod.rs
src/http/: context.rs  errors.rs  mod.rs
src/http/components/: info.rs  mod.rs  template.rs
src/http/routes/: blog.rs  calculator.rs  contact.rs  index.rs  mod.rs  pomodoro.rs  resume.rs
src/utils/: markdown.rs
